--- a/assignment/src/App.css
+++ b/assignment/src/App.css
@@ -4,9 +4,9 @@ body{
 }
 
 .app{
-  width: 50%;
+  width: 45%;
   margin: auto;
-  border: 3px solid pink;
+  border: 8px solid rgb(232, 169, 179);
   padding: 30px;
   background-color:blanchedalmond;
   text-align: center;
@@ -17,6 +17,7 @@ body{
   width: 50%;
   margin: auto;
   border: 3px solid pink;
+  border-radius: 10px;
   padding: 30px;
   background-color: rgb(255, 255, 255);
 }
@@ -25,12 +26,13 @@ body{
   width: 50%;
   margin: auto;
   border: 3px solid pink;
-  padding: 40px;
+  border-radius: 10px;
+  padding: 50px;
   background-color: white;
 }
 
 .title{
-  border: 3px solid pink;
+  border: 4px solid rgb(22, 2, 5);
   border-radius: 10px;
   padding: 10px;
   background-color: burlywood;
